# Elo-MMR

./: .gitignore  CFmine.sh  CFratings.txt  CFratings2011.txt  CFratings2013.txt  CFratings2015.txt  Cargo.toml  Elo.bib  EloR.cpp  EloR.tex  LICENSE  README.md
Standings/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+573 more)
cache/: 1.json  10.json  1000.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1015.json  1016.json  1019.json  102.json  1020.json  1023.json  1025.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1033.json  1034.json  1036.json  1037.json  1038.json  1039.json  104.json  1040.json  1041.json  1042.json  1043.json  1044.json  (+1031 more)
data/: all_contests.txt  contest_ids.json  team_contests.txt
data/codeforces/: contest_ids.csv  contest_ids.json
data/reddit/: predicted_rankings.txt  true_rankings.json
data/synthetic/: contest_ids.json
deprecated/: CFmine.sh  CFreader.cpp  EloR.cpp  all_contests.txt  crawl_CF.py  team_contests.txt
deprecated/rug_true_skill/: mod.rs  nodes.rs  normal.rs
deprecated/standings/: 10.txt  1003.txt  1005.txt  1007.txt  1008.txt  1010.txt  1013.txt  1015.txt  102.txt  1023.txt  1025.txt  1027.txt  1028.txt  1033.txt  1037.txt  104.txt  1041.txt  1042.txt  1043.txt  105.txt  1051.txt  1059.txt  1061.txt  1063.txt  1065.txt  1066.txt  1068.txt  1071.txt  1072.txt  1074.txt  1077.txt  1080.txt  1081.txt  1084.txt  1085.txt  1086.txt  1087.txt  1092.txt  1093.txt  1096.txt  (+468 more)
experiments/: cf-experiment.json  elor-experiment.json  grid-search-results.txt  tc-experiment.json  ts-experiment.json
experiments/codeforces/: bar-rnk.json  cf-ent.json  cf-rnk.json  cfsys-rnk.json  elor-ent.json  elor-rnk.json  elorX-ent.json  elorX-rnk.json  glicko-acc.json  glicko-rnk.json  mmr-ent.json  mmr-fast-acc.json  mmr-fast-rnk.json  mmr-rnk.json  mmx-ent.json  mmx-fast-acc.json  mmx-fast-rnk.json  mmx-rnk.json  tc-rnk.json  tcsys-acc.json  tcsys-rnk.json  trueskill-rnk.json  ts-acc.json  ts-ent.json  ts-rnk.json
experiments/ctf/: bar-acc.json  bar-rnk.json  cfsys-acc.json  glicko-acc.json  glicko-rnk.json  mmr-fast-acc.json  mmr-fast-rnk.json  mmx-fast-acc.json  mmx-fast-rnk.json  tcsys-acc.json  tcsys-rnk.json  trueskill-acc.json  trueskill-rnk.json
experiments/dance/: bar-rnk.json  cfsys-acc.json  cfsys-rnk.json  glicko-acc.json  mmr-fast-rnk.json  mmx-fast-acc.json  mmx-fast-rnk.json  tcsys-acc.json  trueskill-rnk.json
experiments/reddit/: bar-acc.json  bar-rnk.json  cf-acc.json  cf-ent.json  cf-rnk.json  cfsys-acc.json  cfsys-rnk.json  elor-ent.json  elor-rnk.json  elorX-acc.json  elorX-ent.json  elorX-rnk.json  glicko-acc.json  glicko-rnk.json  mmr-acc.json  mmr-ent.json  mmr-fast-acc.json  mmr-fast-rnk.json  mmx-acc.json  mmx-ent.json  mmx-fast-acc.json  mmx-fast-rnk.json  mmx-rnk.json  tc-ent.json  tc-rnk.json  tcsys-acc.json  tcsys-rnk.json  trueskill-acc.json  trueskill-rnk.json  ts-acc.json  ts-ent.json  ts-rnk.json
experiments/synth-la/: bar-acc.json  bar-rnk.json  cfsys-acc.json  glicko-acc.json  glicko-rnk.json  mmr-fast-rnk.json  mmx-fast-acc.json  mmx-fast-rnk.json  tcsys-acc.json  tcsys-rnk.json  trueskill-acc.json  trueskill-rnk.json
experiments/synth-sm/: bar-acc.json  (+13 more)
infernet/: Program.cs  README.md  TupleListConverter.cs  infernet.csproj
json/: all_contests.txt
multi-skill/: Cargo.toml  README.md  infinity.json  mmr-fast-acc.json
multi-skill/src/: experiment_config.rs  lib.rs  metrics.rs  numerical.rs  summary.rs
multi-skill/src/data_processing/: cf_api.rs  ctf_api.rs  ctf_parse.rs  dataset.rs  mod.rs
multi-skill/src/systems/: bar.rs  codeforces_sys.rs  elo_mmr.rs  endure_elo.rs  glicko.rs  mod.rs  simple_elo_mmr.rs  topcoder_sys.rs  util.rs
multi-skill/src/systems/common/: mod.rs  player.rs
multi-skill/src/systems/true_skill/: float.rs  mod.rs  nodes.rs  normal.rs
paper/: EloR.bib  EloR.out  EloR.tex
ranking/: Cargo.toml
ranking/src/: cf_system.rs  compute_ratings.rs  contest_config.rs  elor_system.rs  experiment_config.rs  glicko_system.rs  lib.rs  main.rs  metrics.rs  read_codeforces.rs  summary.rs  tc_system.rs
ranking/src/data_processing/: cf_api.rs  dataset.rs  mod.rs
ranking/src/systems/: bar.rs  cf_sys.rs  codeforces_sys.rs  elo_mmr.rs  glicko.rs  mod.rs  tc_sys.rs  topcoder_sys.rs  util.rs
ranking/src/systems/true_skill/: mod.rs
ranking/src/ts_system/: mod.rs  nodes.rs  normal.rs
scripts/: adversary-plot.ipynb  log-100-contests.txt  log-elor-full.txt  log-elor-simple.txt  log-reddit.txt  mine-reddit.ipynb  mine-reddit.py  mine-topcoder.ipynb  plots.ipynb  print_ratings.rs  ratings_to_spreadsheet.rs  run_data_collection.sh  run_experiments.sh  synth-data.ipynb  trueskill.ipynb
src/: CF_reader.py  CFreader.py  EloR.cpp  compute_ratings.rs  crawl_CF.py  print_ratings.cpp  print_ratings.rs  rated_contests.py
standings/: 1.txt  10.txt  1000.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1015.txt  1016.txt  1019.txt  102.txt  1020.txt  1023.txt  1025.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1033.txt  1034.txt  1036.txt  1037.txt  1038.txt  1039.txt  104.txt  1040.txt  1041.txt  1042.txt  1043.txt  1044.txt  (+971 more)
user-guide/: book.toml
worldrank-api/: Cargo.toml  README.md
worldrank-api/configuration/: base.yml
worldrank-api/src/: configuration.rs  immut_database.rs  lib.rs  main.rs  startup.rs  telemetry.rs
worldrank-api/src/domain/: history.rs  mod.rs  user_name.rs
worldrank-api/src/routes/: autocomplete.rs  count_range.rs  mod.rs  player.rs  top.rs
worldrank-api/tests/api/: autocomplete.rs  count_range.rs  health_check.rs  helpers.rs  main.rs  player.rs  top.rs
(+109 files in other folders)
