[package]
name = "multi-skill"
version = "0.2.0-alpha"
authors = ["Aram Ebtekar <aramebtech@gmail.com>", "Paul Liu <paul.liu@stanford.edu>"]
edition = "2021"

description = "Skill estimation systems for multiplayer competitions"
repository = "https://github.com/EbTech/Elo-MMR"
readme = "../README.md"
keywords = ["skill", "rating", "estimation", "competition", "bayesian"]
categories = ["algorithms", "mathematics", "game-development"]
license = "MIT"

[dependencies]
rayon = "1.8"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16.0"
overload = "0.1.1"
csv = "1.3"
select = "0.6.0"
superslice = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
smallvec = { version = "1.11", features = ["union"] }
rand = "0.8.5"
json5 = "0.4.1"
#f128 = "0.2.9"    (formerly used to test high-precision TrueSkill, but requires GCC's __float128)
num-traits = "0.2.17"
itertools = "0.11.0"
chrono = "0.4.31"

[[bin]]
name = "rate"

[[bin]]
name = "eval"

[[bin]]
name = "hparam_search"

[[bin]]
name = "dance"

[[bin]]
name = "adversary"

[[bin]]
name = "summarize_dataset"
