[package]
name = "multi-skill"
version = "0.2.0-alpha"
authors = ["Aram Ebtekar <aramebtech@gmail.com>", "Paul Liu <paul.liu@stanford.edu>"]
edition = "2024"

description = "Skill estimation systems for multiplayer competitions"
repository = "https://github.com/EbTech/Elo-MMR"
readme = "../README.md"
keywords = ["skill", "rating", "estimation", "competition", "bayesian"]
categories = ["algorithms", "mathematics", "game-development"]
license = "MIT"

[dependencies]
rayon = "1.10"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
overload = "0.1.1"
csv = "1.3"
select = "0.6.0"
superslice = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
smallvec = { version = "1.14", features = ["union"] }
rand = "0.9.0"
json5 = "0.4.1"
num-traits = "0.2.19"
itertools = "0.14.0"
chrono = "0.4.40"
#f128 = "0.2.9"    (formerly used to test high-precision TrueSkill, but requires GCC's __float128)

[[bin]]
name = "rate"

[[bin]]
name = "eval"

[[bin]]
name = "hparam_search"

[[bin]]
name = "dance"

[[bin]]
name = "adversary"

[[bin]]
name = "summarize_dataset"
