[package]
name = "ranking"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }