[package]
name = "ranking"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.13"
overload = "0.1"
float-cmp = "0.8"

[[bin]]
name = "rate"

[[bin]]
name = "report"

[[bin]]
name = "results"
