[package]
name = "worldrank-api"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "worldrank-api"

[dependencies]
multi-skill = { path = "../multi-skill" }

serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.7.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.13.3"
#actix-http = "3.4"
#actix-service = "2.0"
actix-web = "4.4"
tokio = { version = "1.33", features = ["macros"] }
uuid = { version = "1.5", features = ["v4"] }
chrono = "0.4.31"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.40"
#tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.8"
tracing-appender = "0.2.2"
serde-aux = "4.2"
unicode-segmentation = "1.10"
thiserror = "1.0"
anyhow = "1.0"
csv = "1.3"
superslice = "1.0"

[dev-dependencies]
#actix-rt = "2.9"
claims = "0.7.1"
#fake = "2.8"
fake = "~2.3"
once_cell = "1.18"
#quickcheck = "1.0"
quickcheck = "0.9.2"
quickcheck_macros = "1.0"
serde_json = "1.0"
wiremock = "0.5.19"
